--- a/graded_homework/hw1_part2/hw1_part2.ipynb
+++ b/graded_homework/hw1_part2/hw1_part2.ipynb
@@ -853,7 +853,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "eeAA3QX4SgqW"
       },
@@ -879,13 +879,16 @@
         "        self.patch_size = patch_size\n",
         "\n",
         "        # TODO: Define the patch embedding layer using a linear layer.\n",
-        "        self.patch_embedding = ???\n",
+        "        self.patch_embedding = nn.Linear(num_channels * (self.patch_size ** 2), embed_dim)\n",
         "\n",
         "        # TODO: Define the transformer blocks.\n",
-        "        self.transformers = nn.ModuleList(???)\n",
+        "        self.transformers = nn.ModuleList([TransformerBlock(embed_dim, hidden_dim, num_heads) for _ in range(num_layers)])\n",
         "\n",
         "        # TODO: Define the MLP head used for classification using a LayerNorm and linear layer.\n",
-        "        self.mlp_head = ???\n",
+        "        self.mlp_head = nn.Sequential(\n",
+        "            nn.LayerNorm(embed_dim),\n",
+        "            nn.Linear(embed_dim, num_classes)\n",
+        "        )\n",
         "\n",
         "        # Learnable class token & positional embeddings.\n",
         "        self.cls_token = nn.Parameter(torch.randn(1, 1, embed_dim))\n",
@@ -908,23 +911,25 @@
         "        B = x.shape[0]\n",
         "\n",
         "        # TODO: Convert image to patches and apply patch embedding.\n",
-        "        x = ??? # shape: [B, num_patches, embed_dim]\n",
+        "        x = img_to_patch(x, self.patch_size)\n",
+        "        x =  self.patch_embedding(x) # shape: [B, num_patches, embed_dim]\n",
         "\n",
         "        # Add CLS token.\n",
         "        cls_token = self.cls_token.expand(B, -1, -1)\n",
         "        x = torch.cat([cls_token, x], dim=1)   # shape: [B, num_patches + 1, embed_dim]\n",
         "\n",
         "        # TODO: Add positional embeddings\n",
-        "        ???\n",
+        "        x = x + self.pos_embedding\n",
         "\n",
         "        # TODO: Apply dropout\n",
-        "        ???\n",
+        "        x = self.dropout(x)\n",
         "\n",
         "        # TODO: Pass the embedded patches through the transformer blocks.\n",
-        "        ???\n",
+        "        for transformer in self.transformers:\n",
+        "            x = transformer(x)\n",
         "\n",
         "        # Extract the CLS token output for classification.\n",
-        "        cls_output = ???\n",
+        "        cls_output = x[:, -1, :]\n",
         "\n",
         "        return self.mlp_head(cls_output)"
       ]
@@ -940,7 +945,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "BlHSE5qvkPAn"
       },
@@ -968,9 +973,50 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "eKXNPC6TkPAn"
+        "id": "eKXNPC6TkPAn",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105,
+          "referenced_widgets": [
+            "9f705ae9110e4e55868a17ee4d327b94",
+            "7310213b63d44f4286f494522b1429f7",
+            "e4ef9b28dbc94278a5b4ced1a67fffcf",
+            "c55ef69d0eeb469db5437d9b9754584f",
+            "6e5cbcd8d0c14761b819fc27e32e60ed",
+            "b78428ab110b4e0bb39a9a50cc6e2e80",
+            "46551c38af954ffcbe3052975d6a6c5d",
+            "5df6f568a6d7416c91853bfc7949f3e0",
+            "15232cad4e3a46c6bd405d7877bc2b3b",
+            "46bfa431ce194db8af9a7fbae6ebc8be",
+            "4eb2ea05d5ae4cd28c39ce8b311eeb4d"
+          ]
+        },
+        "outputId": "8fe8fcc7-82e0-4efe-b896-2f24d68056ae"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "  0%|          | 0/766 [00:00<?, ?it/s]"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "9f705ae9110e4e55868a17ee4d327b94"
+            }
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/torch/utils/data/dataloader.py:624: UserWarning: This DataLoader will create 4 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ],
       "source": [
         "from tqdm.notebook import tqdm\n",
         "\n",
@@ -1153,6 +1199,352 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.13.2"
+    },
+    "widgets": {
+      "application/vnd.jupyter.widget-state+json": {
+        "9f705ae9110e4e55868a17ee4d327b94": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "HBoxModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "HBoxModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "HBoxView",
+            "box_style": "",
+            "children": [
+              "IPY_MODEL_7310213b63d44f4286f494522b1429f7",
+              "IPY_MODEL_e4ef9b28dbc94278a5b4ced1a67fffcf",
+              "IPY_MODEL_c55ef69d0eeb469db5437d9b9754584f"
+            ],
+            "layout": "IPY_MODEL_6e5cbcd8d0c14761b819fc27e32e60ed"
+          }
+        },
+        "7310213b63d44f4286f494522b1429f7": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "HTMLModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "HTMLModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "HTMLView",
+            "description": "",
+            "description_tooltip": null,
+            "layout": "IPY_MODEL_b78428ab110b4e0bb39a9a50cc6e2e80",
+            "placeholder": "​",
+            "style": "IPY_MODEL_46551c38af954ffcbe3052975d6a6c5d",
+            "value": "Training loss: 1.960:  12%"
+          }
+        },
+        "e4ef9b28dbc94278a5b4ced1a67fffcf": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "FloatProgressModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "FloatProgressModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "ProgressView",
+            "bar_style": "",
+            "description": "",
+            "description_tooltip": null,
+            "layout": "IPY_MODEL_5df6f568a6d7416c91853bfc7949f3e0",
+            "max": 766,
+            "min": 0,
+            "orientation": "horizontal",
+            "style": "IPY_MODEL_15232cad4e3a46c6bd405d7877bc2b3b",
+            "value": 94
+          }
+        },
+        "c55ef69d0eeb469db5437d9b9754584f": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "HTMLModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "HTMLModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "HTMLView",
+            "description": "",
+            "description_tooltip": null,
+            "layout": "IPY_MODEL_46bfa431ce194db8af9a7fbae6ebc8be",
+            "placeholder": "​",
+            "style": "IPY_MODEL_4eb2ea05d5ae4cd28c39ce8b311eeb4d",
+            "value": " 94/766 [05:57&lt;46:43,  4.17s/it]"
+          }
+        },
+        "6e5cbcd8d0c14761b819fc27e32e60ed": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "b78428ab110b4e0bb39a9a50cc6e2e80": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "46551c38af954ffcbe3052975d6a6c5d": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "DescriptionStyleModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "DescriptionStyleModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "description_width": ""
+          }
+        },
+        "5df6f568a6d7416c91853bfc7949f3e0": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "15232cad4e3a46c6bd405d7877bc2b3b": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "ProgressStyleModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "ProgressStyleModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "bar_color": null,
+            "description_width": ""
+          }
+        },
+        "46bfa431ce194db8af9a7fbae6ebc8be": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "4eb2ea05d5ae4cd28c39ce8b311eeb4d": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "DescriptionStyleModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "DescriptionStyleModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "description_width": ""
+          }
+        }
+      }
     }
   },
   "nbformat": 4,
