--- a/graded_homework/hw1_part2/hw1_part2.ipynb
+++ b/graded_homework/hw1_part2/hw1_part2.ipynb
@@ -1155,8 +1155,7 @@
         "\n",
         "### Ans\n",
         "\n",
-        "I empirically observed that the higher the patch size the better the train accuracy. Surprisingly enough, I even got the best accuracy for 5 epochs with a patch size of 32, i.e. the whole image, which is only one token. This is counter-intuitive and is potentially due to an error with my implementation, but I still got over 50 percent accuracy on the Validation/Test set.\n",
-        "However, this trend might be plausible if the images in the dataset differ quite a lot, which means that we don't need too much precision. A patch size of 1 means each token represents a pixel in the image. It is the highest precision we can get for the description of the image by a token."
+        "The lower the patch size, the more \"spatially precise\" the tokens are because they represent a smaller region of the image and so we should observe a trend of lower train losses for smaller patch sizes. However, I didn't observe this, it might be due to a bug in the implementation, but I still get over 50% accuracy on the Validation/Test dataset using the hyperparameters above, including a patch size of 4. A patch size of 1 implies that every token represents a single pixel of the image. In practice, it is computationaly expensive to implement since it would represent too many tokens to process, i.e. the sequence length becomes too big so there would be a memory and runtime limit."
       ]
     },
     {
@@ -1171,7 +1170,7 @@
         "\n",
         "### Ans\n",
         "\n",
-        "The larger the dataset, the better the performance of the Transformer will be since it will be able to generalize better. Because the transformer is larger (more parameters) than the CNN, it will overfit more than the CNN for the same dataset size."
+        "The transformer has in general more parameters than the CNN (at least in our case), so it is more likely to overfit the dataset. Therefore, the larger the dataset size, the better the performance of the Transformer will be, as it will generalize more. So, for the same task, it needs more data than the CNN."
       ]
     },
     {
@@ -1189,7 +1188,8 @@
         "\n",
         "### Ans\n",
         "\n",
-        "The CNN was able to get the same accuracy muche faster than the Transformer. The nature of the models architecture is different. Indeed, the CNN is a signal processing machine that uses kernels to produce recursively activation maps to get more detailed features out of the input image. The kernels are convoluted over the input volumes and are therefore constant throughout the convolution. So, we can say that this is a local approach since the context of each pixel of the activation map is determined by the kernel size, which is the local context the activation pixel \"attended to\". In the other hand, with the vision transformer, the image is split up into tokens that communicate together with self-attention, so this is a global approach. However, one could argue that the CNNs are also using a global approach indirectly which comes from the depth of the network. Indeed, by combining low level features like edges, CNNs are able to detect more complex objects like wheels or eyes which are not locals but more global objects.\n",
+        "The CNN was able to get the same accuracy on the dataset faster (less epochs required for the same loss).\n",
+        "The models architecture is different. For the CNN, the kernels weights are shared over the different spatial regions of the input volume. So, we can say that the CNN tends to be more of a local approach since the context of each pixel of the produced activation map is determined by the kernel size, which is the local context the activation pixel \"attended to\" (by analogy with the self-attention in transformers). On the other hand, with the vision transformer, the image is split up into tokens that \"communicate together\" with self-attention, so this is a more of a global approach. However, one could argue that the CNNs are also using a global approach indirectly coming from the depth of the network. Indeed, by combining low level features like edges, CNNs are able to detect more complex objects like wheels or eyes which are not locals but more \"global\" objects.\n",
         "The transformer needed much more parameters, so the training time was longer."
       ]
     },
