--- a/graded_homework/hw1_part2/hw1_part2.ipynb
+++ b/graded_homework/hw1_part2/hw1_part2.ipynb
@@ -567,6 +567,7 @@
         "        self.scale_factor = self.head_dim ** -0.5  # Scaling factor for attention scores\n",
         "\n",
         "        # TODO: Linear transformations to compute queries (Q), keys (K), and values (V) projecting the input to multi-head dimension\n",
+        "        # We can see these linear transforms as self.head_dim independant linear transforms\n",
         "        self.q = nn.Linear(embed_dim, self.head_dim * self.num_heads)\n",
         "        self.k = nn.Linear(embed_dim, self.head_dim * self.num_heads)\n",
         "        self.v = nn.Linear(embed_dim, self.head_dim * self.num_heads)  # Concatenate the K, Q and V matrices.\n",
